Configure Android Host tests instead of device runs (#5721)
It is much faster

## Release Notes
N/A